--- a/styles/dark.css
+++ b/styles/dark.css
@@ -1,12 +1,31 @@
-/*
-  Специально для тёмной темы при наличии класса,
-  здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
-
 .page.theme_dark {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --text-color: var(--color3);
+  --title-color: var(--color1);
+  --background-color: var(--color2);
+  --background-color-light: var(--color9);
+  --color-text: var(--color7);
+  --page-color: var(--color7);
+  --background-image: url(../images/cover-image-dark.png);
+  --shadow-color: var(--color2);
+  --title: var(--color2);
+  --bord: var(--color2);
+  --button-color: var(--color2);
+  --rec-vis: visible;
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --text-color: var(--color3);
+    --title-color: var(--color1);
+    --background-color: var(--color2);
+    --background-color-light: var(--color9);
+    --color-text: var(--color7);
+    --page-color: var(--color7);
+    --background-image: url(../images/cover-image-dark.png);
+    --shadow-color: var(--color2);
+    --title: var(--color2);
+    --bord: var(--color2);
+    --button-color: var(--color2);
+    --rec-vis: visible;
+  }
 }
