--- a/styles/light.css
+++ b/styles/light.css
@@ -5,8 +5,32 @@
 */
 
 .page.theme_light {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --text-color: var(--color8);
+  --title-color: var(--color5);
+  --background-color: var(--color6);
+  --background-color-light: var(--color11);
+  --color-text: var(--color8);
+  --page-color: var(--color4);
+  --background-image: url(../images/cover-image-light.png);
+  --shadow-color: var(--color2);
+  --title: var(--color8);
+  --bord: var(--color8);
+  --button-color: var(--color8);
+  --rec-vis: hidden;
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --text-color: var(--color8);
+    --title-color: var(--color5);
+    --background-color: var(--color6);
+    --background-color-light: var(--color11);
+    --color-text: var(--color8);
+    --page-color: var(--color4);
+    --background-image: url(../images/cover-image-light.png);
+    --title: var(--color8);
+    --bord: var(--color8);
+    --button-color: var(--color8);
+    --rec-vis: hidden;
+  }
 }
