--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,3 +2,29 @@
   Переменные для вашего проекта
   и их переопределение под различные устройства
 */
+
+:root {
+  --color1: #db00ff;
+  --color2: #ff0070;
+  --color3: #f1b2ce;
+  --color4: #fff1f7;
+  --color5: #ffc2e6;
+  --color6: #ff8dcb;
+  --color7: #000028;
+  --color8: #353430;
+  --color9: #ff007040;
+  --color10: #35343040;
+  --color11: #32312d;
+  --text-color: var(--color3);
+  --title-color: var(--color1);
+  --background-color: var(--color2);
+  --background-color-light: var(--color9);
+  --color-text: var(--color);
+  --page-color: var(--color7);
+  --background-image: url(../images/cover-image-dark.png);
+  --shadow-color: var(--color2);
+  --title: var(--color2);
+  --bord: var(--color2);
+  --button-color: var(--color2);
+  --rec-vis: visible;
+}
