--- a/styles/variables.css
+++ b/styles/variables.css
@@ -4,27 +4,27 @@
 */
 
 :root {
-  --color1: #db00ff;
-  --color2: #ff0070;
-  --color3: #f1b2ce;
-  --color4: #fff1f7;
-  --color5: #ffc2e6;
-  --color6: #ff8dcb;
-  --color7: #000028;
-  --color8: #353430;
-  --color9: #ff007040;
-  --color10: #35343040;
-  --color11: #32312d;
-  --text-color: var(--color3);
-  --title-color: var(--color1);
-  --background-color: var(--color2);
-  --background-color-light: var(--color9);
-  --color-text: var(--color);
-  --page-color: var(--color7);
+  --purple-color: #db00ff;
+  --purple-color-bg: #ff0070;
+  --color-pink-text: #f1b2ce;
+  --pink-light: #fff1f7;
+  --pink-middle: #ffc2e6;
+  --pink-dark: #ff8dcb;
+  --black: #000028;
+  --grey: #353430;
+  --purple-color-bg-40: #ff007040;
+  --shadow-light: #32312d40;
+  --text-color: var(--color-pink-text);
+  --title-color: var(--purple-color);
+  --background-color: var(--purple-color-bg);
+  --background-color-light: var(--purple-color-bg-40);
+  --page-color: var(--black);
   --background-image: url(../images/cover-image-dark.png);
-  --shadow-color: var(--color2);
-  --title: var(--color2);
-  --bord: var(--color2);
-  --button-color: var(--color2);
+  --shadow-color: var(--purple-color-bg);
+  --title: var(--purple-color-bg);
+  --bord: var(--purple-color-bg);
+  --button-color: var(--purple-color-bg);
   --rec-vis: visible;
 }
+
+
